--- a/exs_fix_2/exs_fix_2/html/ex2.html
+++ b/exs_fix_2/exs_fix_2/html/ex2.html
@@ -1,5 +1,3 @@
-2. Crie uma interface para um caixa eletrônico. O usuário informará o valor e o seu programa deverá informar a quantidade de notas de cada tipo para o saque. 
-Considere notas de R$ 200,00, R$ 100,00, R$ 50,00, R$ 20,00, R$ 10,00, R$ 5,00 e R$ 2,00. Não se pode sacar valores inferiores a R$ 2,00 e não há saque de moedas. 
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -11,7 +9,9 @@ Considere notas de R$ 200,00, R$ 100,00, R$ 50,00, R$ 20,00, R$ 10,00, R$ 5,00 e
     <h1>Caixa Eletrônico</h1>
     <form action="">
         <p>Informe o valor que deseja sacar: </p>
-        R$<input type="text" id="valor"><br>
+        R$<input type="text" id="valor">
+
+        <input type="submit" value="OK">
     </form>
 
     <h3 id="resposta"></h3>
