jogo quase final

--- a/EXFIX5/HTML/JOGO.html
+++ b/EXFIX5/HTML/JOGO.html
@@ -9,10 +9,49 @@
 <body>
     <h1>Palavra Secreta</h1>
 
-    <h3 id="palavra" ></h3>
+    <div class="tabela">
+        <div class="fileira">
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+        </div>
+        <div class="fileira">
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+        </div>
+        <div class="fileira">
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+        </div>
+        <div class="fileira">
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+        </div>
+        <div class="fileira">
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+            <div class="cx"></div>
+        </div>
+
+    </div>
+<br>
 
     <label for="input"></label>
-    <input type="text" id="input" value="Digite palavra">
-    <button>Testar</button>
+    <input type="text" id="input" maxlength="5">
+    <button onclick="palavraAleatoria()">Testar</button>
+    <script src="../JS/JOGOJS.js"></script>
 </body>
 </html>
